Fixed extra spacing for lower resolutions

--- a/_buttons.css.scss
+++ b/_buttons.css.scss
@@ -110,9 +110,7 @@
     font-size: 1.1em;
   }
 
-  &.large {
-    padding: 1em 1.5em;
-  }
+  &.large { @include media($breakTabletPortrait) { padding: 1em 1.5em } }
 
   &.call-to-action {
     @extend .large;
